# ULFast-Lane-Detection-ROS

./: README.md
Ultrafast-Lane-Detection-Inference-Pytorch-/: videoLaneDetection.py
lane_detection_catkin_ws/devel/: local_setup.sh  setup.sh
lane_detection_catkin_ws/devel/lib/lane_detection/: lane_detection_node.py
lane_detection_catkin_ws/devel/lib/pkgconfig/: lane_detection.pc
lane_detection_catkin_ws/devel/share/lane_detection/cmake/: lane_detectionConfig.cmake
lane_detection_catkin_ws/src/lane_detection/: CMakeLists.txt  package.xml
lane_detection_catkin_ws/src/lane_detection/launch/: lane_detection.launch
lane_detection_catkin_ws/src/lane_detection/scripts/: lane_detection_node.py  line_to_3d.py
lane_detection_catkin_ws/src/lane_detection/ultrafastLaneDetector/: ultrafastLaneDetector.py
